# CPM

./: .gitignore  CMakeLists.txt  LICENSE  README.md
build-scripts/: Command-Info.txt
include/CPM/: CPM.h  CPM_Command.h  CPM_Command_Modifier.h  CPM_Global_Modifier.h  CPM_Memory.h  CPM_Registry.h
src/: main.cpp
src/Commands/: CPM_Command_Test1.cpp  CPM_Command_Test2.cpp
